--- a/package.json
+++ b/package.json
@@ -10,32 +10,38 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native/new-app-screen": "0.84.0",
+    "axios": "^1.13.5",
     "react": "19.2.3",
     "react-native": "0.84.0",
-    "@react-native/new-app-screen": "0.84.0",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-quick-sqlite": "^8.1.0",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-tcp-socket": "^6.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "20.1.0",
-    "@react-native-community/cli-platform-android": "20.1.0",
-    "@react-native-community/cli-platform-ios": "20.1.0",
+    "@react-native-community/cli": "^13.6.9",
+    "@react-native-community/cli-platform-android": "^15.1.0",
+    "@react-native-community/cli-platform-ios": "^13.6.9",
     "@react-native/babel-preset": "0.84.0",
-    "@react-native/eslint-config": "0.84.0",
+    "@react-native/eslint-config": "^0.83.2",
     "@react-native/metro-config": "0.84.0",
     "@react-native/typescript-config": "0.84.0",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.2.0",
     "@types/react-test-renderer": "^19.1.0",
-    "eslint": "^8.19.0",
-    "jest": "^29.6.3",
+    "eslint": "^10.0.0",
+    "jest": "^25.0.0",
     "prettier": "2.8.8",
     "react-test-renderer": "19.2.3",
     "typescript": "^5.8.3"
   },
   "engines": {
     "node": ">= 22.11.0"
-  }
+  },
+  "packageManager": "npm@11.10.1"
 }
