add background loc, typing and basic conf

--- a/package.json
+++ b/package.json
@@ -16,25 +16,30 @@
     "react": "19.2.3",
     "react-native": "0.84.0",
     "react-native-geolocation-service": "^5.3.1",
-    "react-native-quick-sqlite": "^8.1.0",
+    "react-native-quick-sqlite": "^8.2.7",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-tcp-socket": "^6.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/eslint-parser": "^7.28.6",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
     "@react-native-community/cli": "^13.6.9",
     "@react-native-community/cli-platform-android": "^15.1.0",
     "@react-native-community/cli-platform-ios": "^13.6.9",
     "@react-native/babel-preset": "0.84.0",
-    "@react-native/eslint-config": "^0.83.2",
+    "@react-native/eslint-config": "^0.84.0",
     "@react-native/metro-config": "0.84.0",
     "@react-native/typescript-config": "0.84.0",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.2.0",
     "@types/react-test-renderer": "^19.1.0",
-    "eslint": "^10.0.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-ft-flow": "^3.0.11",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-native": "^5.0.0",
     "jest": "^25.0.0",
     "prettier": "2.8.8",
     "react-test-renderer": "19.2.3",
